ulos2-beta.2:
	Mostly focusing on compatibility and bug fixes.

	* cynosure-2: Fixed a very subtle bug with the preemption layer where
	calling code after loading other code would make the sysyield function
	disappear
	* cynosure-2: Sysyield functions now `pcall` yields, to avoid crashes when
	e.g. yielding from a function given to `string.gsub`
	* coreutils: Implemented `free`
	* coreutils: `lua` now sets up `arg` more-or-less correctly
	* coreutils: `env` now properly handles argument processing
	* coreutils: `mkdir` now properly ignores `EEXIST`
	* liblua: Implemented `getopt.process`
	* liblua: `package.path` now contains `./?.lua;./?/init.lua` by default