@@ -10,5 +10,9 @@ ulos2-beta.2:
 	* coreutils: `lua` now sets up `arg` more-or-less correctly
 	* coreutils: `env` now properly handles argument processing
 	* coreutils: `mkdir` now properly ignores `EEXIST`
+	* coreutils: `chmod` now accepts `[ugoa][+-=][rwx]` modes
 	* liblua: Implemented `getopt.process`
 	* liblua: `package.path` now contains `./?.lua;./?/init.lua` by default
+	* liblua: Added an option `exclude_numbers` to `getopt`
+	* liblua: Tweaked `getopt`'s invalid short option error message to be
+	slightly clearer
